[package]
name = "vpc-migration-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_type = "2.6.0"
sysinfo = "0.29.0"
log = "0.4.17"
dialoguer = "0.10.4"
thiserror = "1.0.40"
env_logger = "0.10.0"
structopt = "0.3.26"